--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp308-w2019-lesson3a",
+  "name": "expressportfolio",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,14 +10,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.6"
   },
-  "description": "Express generator demo",
+  "description": "Express Portfolio",
   "main": "server.js",
   "author": "Tejinder kaur",
   "license": "ISC",
@@ -27,5 +27,13 @@
     "@types/express": "^4.16.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TejinderKaur/COMP308-ExpressPortfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TejinderKaur/COMP308-ExpressPortfolio/issues"
+  },
+  "homepage": "https://github.com/TejinderKaur/COMP308-ExpressPortfolio#readme"
 }
